2.0.0-beta4
- New: Redesigned filter bars
- Improved: (not F-Droid) No cropping of camera stream in ML Kit, add option for it
- Improved: Better handling of interrupted workflow in quick mode

2.0.0-beta03
- New: Support for server version 3.1.1 (v3.1.0 is not supported)
- New: (not F-Droid) Add ML Kit as better camera barcode scanner
- New: Option to use 2D barcode format for scanner everywhere (#265)
- New: Option to restrict formats for faster barcode detection (default: only EAN)
- New: Support for grocycodes (all product fields with scanner) (#438)
- New: HTTP proxy and Tor (Orbox) support (#130)
- Improved: Don't assume port 8123 during Home Assistant setup (#413)
- Improved: Add new card to login form which contains info about port (#413)
- Improved: Set focus mode to continuous in ZXing barcode scanner (works better)
- Improved: Tap to toggle torch on login page with QR code scanner
- Improved: Theme can be set to light/dark only or follow system (#423)
- Improved: Consume page shows info about current stock amount (#440)
- Fixed: Barcode scanner didn't start again after error in quick mode
- Fixed: Search field didn't appear after going back to stock or shopping list (#421)
- Fixed: Invisible date picker in light theme (#422)
- Fixed: Product dropdown appeared again after scanning barcode (#404)
- Fixed: White icons on white navigation bar with SDK 26 (#366)
- Fixed: Shopping mode list scrolled to bottom after top category was done (#439)
- Fixed: Activity started twice if theme was different than system theme

2.0.0-beta02
- New: Almost all stock settings are now available (#395)
- Improved: Cleaner debugging settings page
- Improved: On consume page stock amount is used if barcode amount is bigger than stock (#357)
- Improved: Backup by Android system now is supported
- Improved: All open-source licenses listed in about section
- Fixed: Crash on startup with some servers (#407)