@@ -2,6 +2,7 @@
 - New: Redesigned filter bars
 - Improved: (not F-Droid) No cropping of camera stream in ML Kit, add option for it
 - Improved: Better handling of interrupted workflow in quick mode
+- Improved: Inventory page now has stock info like on consume page
 
 2.0.0-beta03
 - New: Support for server version 3.1.1 (v3.1.0 is not supported)
